[tool.poetry]
name = "blockchain-python"
version = "0.1.0"
description = ""
authors = ["Navaid <muhammad.navaid@invixible.com>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.7.7"
fastapi = {extras = ["all"], version = "^0.79.0"}
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
